internet_gateway.tf
resource "aws_internet_gateway" "example" {
  vpc_id = aws_vpc.example.id
  tags = {
    Name = "${var.r_prefix}-igw"
  }
}
