vpc.tf
resource "aws_vpc" "example" {
  cidr_block           = var.cidr_block
  enable_dns_support   = true
  enable_dns_hostnames = true
  tags = {
    Name = "pragmatic"
  }
}
